-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.0
-
None
-
a213ce387 (12.0), 2e353aa1b (master), a63368efd (master)
For regular text files the editor shows information about current column, current line and encoding in the top right corner. For the Markdown editor this information is missing.
Normal text editors:

Markdown editor:

As Markdown files are plain text files this information is useful for them, and this information panel should return.
| For Gerrit Dashboard: QTCREATORBUG-30166 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 528594,2 | TextEditor: Repair insertExtraToolBarWidget() | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 528595,2 | Markdown: Use regular text editor's toolbar | 12.0 | qt-creator/qt-creator | Status: ABANDONED | +1 | 0 |
| 528865,1 | TextEditor: Give access to m_toolBarWidget | 12.0 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
| 529536,2 | TextEditor: Give access to m_toolBarWidget | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 529537,2 | Markdown: Use regular text editor's toolbar | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |